add modal windows

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
   <include src="./partials/customer-reviews.html"></include>
   <include src="./partials/contacts.html"></include>
   <include src="./partials/footer.html"></include>
+  <include src="./partials/modals.html"></include>
 
   <!-- slick jquery -->
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -36,6 +37,9 @@
 
   <!-- base js -->
   <script src="./js/slick.js"></script>
+
+  <!-- modal script -->
+  <script src="./js/modal.js"></script>
 </body>
 
 </html>
