--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modals.html"></include>
+    <include src="./partials/buttons.html"></include>
 
     <!-- slick jquery -->
     <script
