--- a/src/index.html
+++ b/src/index.html
@@ -57,5 +57,8 @@
 
     <!-- modal script -->
     <script src="./js/modal.js"></script>
+
+    <!-- mobile menu -->
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
