--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
     <script type="module" src="./index.js"></script>
   </head>
 
-  <body>
+  <body class="js-body">
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/products.html"></include>
