add slow-scroll and close mobile-menu

--- a/src/index.html
+++ b/src/index.html
@@ -60,5 +60,8 @@
 
     <!-- mobile menu -->
     <script src="./js/mobile-menu.js"></script>
+
+    <!-- slow scroll -->
+    <script src="./js/slow-scroll.js"></script>
   </body>
 </html>
